alignment is a lot better, may still want to increase the margin between the rows

--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -663,7 +663,7 @@ select {
 }
 
 .right-form-side > *{
-    margin: 5% auto !important; /*not the best code, can do better*/
+    /*margin: 5% auto !important;*/ /*not the best code, can do better*/
     width: inherit;
 }
 
