--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -36,7 +36,7 @@
                                 <li>
                                     <a href="@Url.Action("Index", "PublicVM", new
                                         {
-                                            publicId = TempData["Folder_Id"],
+                                            folderId = TempData["Folder_Id"],
                                             policyNumber = policy,
                                             navBarGroup = NavBarGroupOptions.policy,
                                             navBarItem = @policy
