--- a/DocSearch2.1/Views/Shared/_CategoryNavBar.cshtml
+++ b/DocSearch2.1/Views/Shared/_CategoryNavBar.cshtml
@@ -8,7 +8,7 @@
             <li class="category_nav">
                 <div>
                     <a href="@Url.Action("Index", "PublicVM", new {
-                                            publicId = TempData["Folder_Id"],
+                                            folderId = TempData["Folder_Id"],
                                             navBarGroup = NavBarGroupOptions.category,
                                             navBarItem = @item.CategoryName
                                         })"
@@ -28,7 +28,7 @@
                         {
                             <li>
                                 <a href="@Url.Action("Index", "PublicVM", new {
-                                                        publicId = TempData["Folder_Id"],
+                                                        folderId = TempData["Folder_Id"],
                                                         navBarGroup = NavBarGroupOptions.doctype,
                                                         navBarItem = @dt
                                                     })"
