--- a/DocSearch2.1/Views/Shared/_PublicTable.cshtml
+++ b/DocSearch2.1/Views/Shared/_PublicTable.cshtml
@@ -193,8 +193,7 @@ else
 {
     <div id="public_table" class="row default-table" data-currentRecord="@ViewData["currentRecordsCount"]" data-currentLowYear="@(((List<SelectListItem>)TempData["YearRange"]).First().Text)" data-currentHighYear="@(((List<SelectListItem>)TempData["YearRange"]).Last().Text)">
         <div id="public_table_inner" class="col-md-12 noData">
-            <h3>Sorry, no documents were found within the last year.  Would you like to see all documents?  Click @Ajax.ActionLink("here", "Index", new { publicId= TempData["Folder_Id"], IssueYearMinRange = -100}, new AjaxOptions { UpdateTargetId= "public_table", InsertionMode = InsertionMode.ReplaceWith, HttpMethod = "GET", OnSuccess = "updateCurrentCount" }, new { id = "allDocs"}).</h3>
-            @*http://localhost:57188/PublicVM?publicId=187&IssueYearMinRange=-100&searchTerm=  *@
+            <h3>Sorry, no documents were found within the last year.  Would you like to see all documents?  Click @Ajax.ActionLink("here", "Index", new { folderId= TempData["Folder_Id"], IssueYearMinRange = -100}, new AjaxOptions { UpdateTargetId= "public_table", InsertionMode = InsertionMode.ReplaceWith, HttpMethod = "GET", OnSuccess = "updateCurrentCount" }, new { id = "allDocs"}).</h3>
         </div>
     </div>
 }
